<resources>
    <string name="app_name">Calculator</string>
    <string name="name_on_screen">CALCULATOR</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mult">*</string>
    <string name="btn_div">/</string>
    <string name="btn_equal">=</string>
    <string name="btn_dot">.</string>
    <string name="btn_msave">MS</string>
    <string name="btn_mread">MR</string>
    <string name="btn_mclear">MC</string>
    <string name="btn_clear">C</string>
</resources>