<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_on_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_on_screen"
        android:textSize="24sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/name_on_screen"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/calculation"
        />

    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_0"
            android:text="@string/btn_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_1"
            android:text="@string/btn_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_2"
            android:text="@string/btn_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_plus"
            android:text="@string/btn_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#008040"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_3"
            android:text="@string/btn_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_4"
            android:text="@string/btn_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_5"
            android:text="@string/btn_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_minus"
            android:text="@string/btn_sub"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#008040"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_6"
            android:text="@string/btn_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_7"
            android:text="@string/btn_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_8"
            android:text="@string/btn_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_mult"
            android:text="@string/btn_mult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#008040"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_9"
            android:text="@string/btn_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_dot"
            android:text="@string/btn_dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_equal"
            android:text="@string/btn_equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#e67300"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_div"
            android:text="@string/btn_div"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#008040"
            android:textSize="40sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_msave"
            android:text="@string/btn_msave"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#663300"
            android:textSize="35sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_mread"
            android:text="@string/btn_mread"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#663300"
            android:textSize="35sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_mclear"
            android:text="@string/btn_mclear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#663300"
            android:textSize="35sp"
            app:layout_constraintDimensionRatio="1:1" />

        <Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="#ff0000"
            android:textSize="35sp"
            app:layout_constraintDimensionRatio="1:1" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>